# Modern-Python

./: .gitignore  .pre-commit-config.yaml  00 Intro. 환경 설정법.md  main.py
Phase별. Modern Python/: Phase 0. 환경 & 도구 셋업.md  Phase 1. 변수, 타입, 문자열 재정립.md  Phase0_settings.md  Phase1_variables, types, strings.md  Phase2_data structures.md  Phase3_function design.md  Phase4_class data modeling.md
my-project/: main.py  pyproject.toml
